<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="viewEnd"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:scrollHorizontally="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="viewEnd"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:scrollHorizontally="true"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSete"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnSete"
            android:textSize="20sp"
            android:onClick="addBtn7"/>
        <Button
            android:id="@+id/btnOito"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnOito"
            android:textSize="20sp"
            android:onClick="addBtn8"/>
        <Button
            android:id="@+id/btnNove"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnNove"
            android:textSize="20sp"
            android:onClick="addBtn9"/>
        <Button
            android:id="@+id/btnAdicao"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:text="@string/btnAdicao"
            android:textSize="20sp"
            android:onClick="adicao"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnQuatro"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnQuatro"
            android:textSize="20sp"
            android:onClick="addBtn4"/>
        <Button
            android:id="@+id/btnCinco"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnCinco"
            android:textSize="20sp"
            android:onClick="addBtn5"/>
        <Button
            android:id="@+id/btnSeis"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnSeis"
            android:textSize="20sp"
            android:onClick="addBtn6"/>
        <Button
            android:id="@+id/btnSubtracao"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:text="@string/btnSubtracao"
            android:textSize="20sp"
            android:onClick="subtracao"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUm"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnUm"
            android:textSize="20sp"
            android:onClick="addBtn1"/>
        <Button
            android:id="@+id/btnDois"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnDois"
            android:textSize="20sp"
            android:onClick="addBtn2"/>
        <Button
            android:id="@+id/btnTres"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnTres"
            android:textSize="20sp"
            android:onClick="addBtn3"/>
        <Button
            android:id="@+id/btnDivisao"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:text="@string/btnDivisao"
            android:textSize="20sp"
            android:onClick="divisao"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnZero"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnZero"
            android:textSize="20sp"
            android:onClick="addBtn0"/>
        <Button
            android:id="@+id/btnVirgula"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnVirgula"
            android:textSize="20sp"
            android:onClick="btnVirgula"/>
        <Button
            android:id="@+id/btnIgual"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnIgual"
            android:textSize="20sp"
            android:onClick="igual"/>
        <Button
            android:id="@+id/btnMultiplicacao"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:text="@string/btnMultiplicacao"
            android:textSize="20sp"
            android:onClick="multiplicacao"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnHistorico"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnHistorico"
            android:textSize="10sp" />
        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:text="@string/btnLimpar"
            android:onClick="btnLimpa"
            android:textSize="10sp" />

    </LinearLayout>

</LinearLayout>