<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/numeroUm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/numeroUm"
            android:textAlignment="viewEnd"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/numeroDois"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/numeroDois"
            android:textAlignment="viewEnd"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/resultado"
            android:textAlignment="viewEnd"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/linha"
            android:textAlignment="viewEnd"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewEnd"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/numeroUm"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/numeroDois"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/resultado"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/linha"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/numeroUm"
            android:textAlignment="viewEnd"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/numeroDois"
            android:textAlignment="viewEnd"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/resultado"
            android:textAlignment="viewEnd"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/linha"
            android:textAlignment="viewEnd"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewEnd"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/numeroUm"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/numeroDois"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/resultado"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/linha"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewEnd"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/numeroUm"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/numeroDois"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/resultado"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="30dp"
            android:scrollHorizontally="true"
            android:text="@string/linha"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnVoltar"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginEnd="10dp"
                android:text="@string/btnVoltar"
                android:textSize="40sp" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>